fix: nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,24 @@
-server {
-    listen 80;
-    server_name localhost;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-    error_page  500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    server {
+        listen       80;
+        server_name  localhost;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
     }
 }
