fix: nginx configs

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,11 @@ http {
         listen       80;
         server_name  localhost;
 
+        location /images/ {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+        }
+
         location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
